@@ -102,16 +102,18 @@ public:
         
     // expects a token sequence as its parameters
     template <typename IteratorT>
-    bool is_defined(IteratorT const &begin, IteratorT const &end);
+    bool is_defined(IteratorT const &begin, IteratorT const &end) const;
     
     // expects an arbitrary string as its parameter
     template<typename StringT>
-    bool is_defined(StringT const &str);
+    bool is_defined(StringT const &str) const;
 
 //  Get the macro definition for the given macro scope
     bool get_macro(string_type const &name, bool &has_parameters, 
-        bool &is_predefined, position_type &pos, parameter_container_type &parameters, 
-        definition_container_type &definition, defined_macros_type *scope = 0);
+        bool &is_predefined, position_type &pos, 
+        parameter_container_type &parameters, 
+        definition_container_type &definition, 
+        defined_macros_type *scope = 0) const;
         
 //  Remove a macro name from the given macro scope
     bool remove_macro(token_type const &token, bool even_predefined = false);
@@ -382,7 +384,7 @@ template <typename ContextT>
 template <typename IteratorT>
 inline bool 
 macromap<ContextT>::is_defined(IteratorT const &begin, 
-    IteratorT const &end) 
+    IteratorT const &end) const
 {
 // in normal mode the name under inspection should consist of an identifier
 // only
@@ -416,7 +418,7 @@ typename defined_macros_type::iterator cit(current_macros -> find(name));
 template <typename ContextT>
 template<typename StringT>
 inline bool 
-macromap<ContextT>::is_defined(StringT const &str)
+macromap<ContextT>::is_defined(StringT const &str) const
 {
 string_type name (str.c_str());
 typename defined_macros_type::iterator cit(current_macros -> find(name));
@@ -435,7 +437,7 @@ macromap<ContextT>::get_macro(string_type const &name, bool &has_parameters,
     bool &is_predefined, position_type &pos, 
     parameter_container_type &parameters, 
     definition_container_type &definition, 
-    defined_macros_type *scope)
+    defined_macros_type *scope) const
 {
     typename defined_macros_type::iterator it;
     if (!is_defined(name, it, scope))
